docs/pages/versions/v57.0.0/sdk/age-range.mdx
---
title: AgeRange
description: A library that provides access to age range information using Play Age Signals API on Android and Declared Age Range framework on iOS.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-age-range'
packageName: 'expo-age-range'
platforms: ['android', 'ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigReactNative } from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-age-range` provides access to user age range information. It uses Google's [Play Age Signals API](https://developer.android.com/google/play/age-signals/use-age-signals-api) on Android and Apple's [Declared Age Range framework](https://developer.apple.com/documentation/declaredagerange/) on iOS.

This library allows you to request age range information from your app users to help you comply with age-appropriate content regulations (such as in [Texas, USA](https://developer.apple.com/news/?id=btkirlj8)) and provide age-appropriate experiences in your app.

> **important** **The underlying native APIs provided by Google and Apple are under active development. While this library is stable, it may require an increased number of breaking changes to accommodate that.**

### Limitations

We recommend testing the functionality on a real device, as simulator runtimes may not work as expected.

## Installation

<APIInstallSection />

## Configuration in app config

### Set up the iOS project

To use the age range API on iOS, you need to build your project with Xcode 26.0 or later but we recommend you build with the latest Xcode to have access to the latest APIs.

The `com.apple.developer.declared-age-range` entitlement is required. Add it to your [app config](../config/app/) file:

```json app.json
{
  "expo": {
    "ios": {
      "entitlements": {
        "com.apple.developer.declared-age-range": true
      }
    }
  }
}
```

<ConfigReactNative>

For existing React Native projects, add the entitlement to your project's **ios/[app]/[app].entitlements** file:

```xml
<key>com.apple.developer.declared-age-range</key>
<true/>
```

</ConfigReactNative>

## Usage

On Android, Play Age Signals only reports an age range while the user consents to sharing it. Call [`requestAgeSignalsAccessAsync`](#agerangerequestagesignalsaccessasync) first and continue only when it resolves with `'SHARED'`. On iOS the consent prompt is part of `requestAgeRangeAsync`, so the call resolves with `null` and the example below continues.

<SnackInline label="Age Range usage" dependencies={['expo-age-range']} platforms={['android', 'ios']}>

```tsx
import * as AgeRange from 'expo-age-range';
import { useState } from 'react';
import { StyleSheet, Text, View, Button } from 'react-native';

export default function App() {
  const [result, setResult] = useState<AgeRange.AgeRangeResponse | { error: string } | null>(null);

  const requestAgeRange = async () => {
    try {
      // On Android, ask the user to share their age signals first. Resolves with null on iOS.
      const status = await AgeRange.requestAgeSignalsAccessAsync();
      if (status !== null && status !== 'SHARED') {
        setResult({ error: `Age signals are not shared: ${status}` });
        return;
      }

      const ageRange = await AgeRange.requestAgeRangeAsync({
        threshold1: 10,
        threshold2: 13,
        threshold3: 18,
      });
      setResult(ageRange);
    } catch (error) {
      setResult({ error: error instanceof Error ? error.message : String(error) });
    }
  };

  return (
    <View style={styles.container}>
      <Button title="Request age range" onPress={requestAgeRange} />
      {result && (
        <Text style={styles.result}>
          {'error' in result ? `Error: ${result.error}` : `Lower age bound: ${result.lowerBound}`}
        </Text>
      )}
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    padding: 20,
  },
  result: {
    marginTop: 20,
    fontSize: 16,
  },
});
```

</SnackInline>

## Additional resources

- [Play Age Signals API](https://developer.android.com/google/play/age-signals/use-age-signals-api): Android documentation for age signals
- [Declared Age Range framework](https://developer.apple.com/documentation/declaredagerange/): iOS documentation for declared age range

## API

```ts
import * as AgeRange from 'expo-age-range';
```

<APISection packageName="expo-age-range" apiName="AgeRange" />

## Error codes

Available in the `code` property of any error thrown by the native module. For Android-specific error codes, see the "Error code reference" in [Use Play Age Signals API docs](https://developer.android.com/google/play/age-signals/handle-errors).

| Code                            | Platform                                 | Description                                                                                                        |
| ------------------------------- | ---------------------------------------- | ------------------------------------------------------------------------------------------------------------------ |
| `ERR_AGE_RANGE_USER_DECLINED`   | <PlatformTags platforms={['ios']} />     | User declined to share their age range.                                                                            |
| `ERR_AGE_RANGE_NOT_AVAILABLE`   | <PlatformTags platforms={['ios']} />     | Age range not available. The most likely cause is that user is not signed in to their Apple account on the device. |
| `ERR_AGE_RANGE_INVALID_REQUEST` | <PlatformTags platforms={['ios']} />     | The provided params were invalid. The age ranges need to be minimum 2 years apart.                                 |
| `ERR_AGE_RANGE_TASK_CANCELLED`  | <PlatformTags platforms={['android']} /> | The user dismissed the Play Age Signals age sharing consent screen.                                                |
